# pyinstrument

./: .coverage  .editorconfig  .gitignore  .mutmut.ini  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  DESIGN.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Manifest.in  README.md  _statistical_profiler.c  flaky.py  middleware.py  mkdocs.yml  noxfile.py  overhead_test.py  package.json  profiler.py  pylintrc  pyproject.toml  rate_limiter.c  requirements-dev.txt  setup.cfg  setup.py  simple_overhead_test.py  style.css
mutants/: mutmut-stats.json  pyproject.toml  setup.cfg
mutants/courseProjectDocs/Unit-Testing/: README.md  report.md  test_course.py
mutants/courseProjectDocs/Unit-Testing/Profiler/: profile_module.py  test_profile_module.py
mutants/courseProjectDocs/Unit-Testing/Renderer/: renderer_module.py  (+1 more)
mutants/pyinstrument/: __init__.py  context_manager.py  frame.py  frame_info.py  frame_ops.py  middleware.py  processors.py  profiler.py  session.py  stack_sampler.py  typing.py  util.py
mutants/pyinstrument/low_level/: pyi_timing_thread.c  pyi_timing_thread_python.py  stat_profile_python.py  types.py
mutants/pyinstrument/magic/: __init__.py  _utils.py  magic.py
mutants/pyinstrument/renderers/: __init__.py  base.py  console.py  html.py  jsonrenderer.py  pstatsrenderer.py  session.py  speedscope.py
mutants/test/: fake_time_util.py  test_cmdline.py  test_context_manager.py  test_ipython_magic.py  test_overflow.py  test_profiler.py  test_profiler_async.py
mutants/test/low_level/: test_context.py  test_frame_info.py  test_timing_thread.py  util.py
(+277 files in other folders)
