[bumpversion]
current_version = 2.3.0
commit = True
tag = True
message = Bump version
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<num>\d+))?
serialize = 
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = release
values = 
	a
	b
	rc
	release

[bumpversion:file:setup.py]

[bumpversion:file:pyinstrument/__init__.py]

[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[aliases]
test = pytest

