[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.pyright]
include = ["pyinstrument", "test"]
ignore = ["pyinstrument/vendor"]
pythonVersion = "3.8"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
